First push; Jupyter Notebook
First push of JupyterNotebook with data cleaning, agg and initial analysis

--- a/NLCrimeAnalysis.ipynb
+++ b/NLCrimeAnalysis.ipynb
@@ -26,10 +26,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ad1b008e-f977-4ccf-83ff-a42b069cee65",
+   "metadata": {},
+   "source": [
+    "# Data prep"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ff014d9d-aa15-46fa-ae95-f0b9f2a91fdb",
    "metadata": {},
    "source": [
-    "# Import crime data"
+    "## Import crime data"
    ]
   },
   {
@@ -797,7 +805,7 @@
    "id": "e52ae9aa-746a-4cf0-910c-cf835d7fe156",
    "metadata": {},
    "source": [
-    "# Extract crime metadata"
+    "## Extract crime metadata"
    ]
   },
   {
@@ -1034,7 +1042,7 @@
    "id": "b7ea6661-e31a-4abd-a50c-394f51d6da70",
    "metadata": {},
    "source": [
-    "# Map crime, gemeente and year by codes to crime data"
+    "## Map crime, gemeente and year by codes to crime data"
    ]
   },
   {
@@ -1813,7 +1821,7 @@
    "id": "d6da8845-e4b1-4962-a2a9-bdf357af3cab",
    "metadata": {},
    "source": [
-    "# Import & extract population data"
+    "## Import & extract population data"
    ]
   },
   {
@@ -2311,7 +2319,7 @@
    "id": "35c2a828-d2dd-4a59-8868-c8dc86fe3dc1",
    "metadata": {},
    "source": [
-    "# Calculate per capita crime in each category & year, per gemeente"
+    "## Calculate per capita crime in each category & year, per gemeente"
    ]
   },
   {
