--- a/NLCrimeAnalysis.ipynb
+++ b/NLCrimeAnalysis.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "source": [
     "# To-Dos\n",
-    "- [ ] Keep overall crime per gemeente in final dataset; can then violent crime as a percent of total crime in each gemeente"
+    "- [ ] \n",
+    "- [ ] Keep overall crime per gemeente in final dataset; can then check violent crime as a percent of total crime in each gemeente"
    ]
   },
   {
