Updated data source

--- a/NLCrimeAnalysis.ipynb
+++ b/NLCrimeAnalysis.ipynb
@@ -6,7 +6,9 @@
    "metadata": {},
    "source": [
     "# To-Dos\n",
-    "- [ ] \n",
+    "- [ ] Redo with full gemeente datasets\n",
+    "- [ ] Figure out how to create rows for totals by crime category\n",
+    "- [ ] Look up how to use transform vs. agg\n",
     "- [ ] Keep overall crime per gemeente in final dataset; can then check violent crime as a percent of total crime in each gemeente"
    ]
   },
@@ -1734,6 +1736,7 @@
     "## On: 12-07-2025\n",
     "\n",
     "# popdata = 'Bevolking_Gemeenten.csv'\n",
+    "## https://opendata.cbs.nl/statline/#/CBS/nl/dataset/37230ned/table?ts=1752318493150\n",
     "popdata = 'Pop_NL_MajorCities.csv'\n",
     "\n",
     "\n",
