Filled out text for question 4

--- a/NLCrimeAnalysis.ipynb
+++ b/NLCrimeAnalysis.ipynb
@@ -6677,16 +6677,24 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "73456ec8-fd43-420e-9607-606a2afdf5d1",
+   "cell_type": "markdown",
+   "id": "a03dea2f-3e7d-4664-865f-2f88d7d142db",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "While looking at how past trends arrived at the present is useful, what most people care about is: which cities are the most dangerous now? Instead of looking at a selection of 10 major cities that had the highest average total crime rates over time, we'll now look at which cities had the highest total and violent crime rates in just 2024. \n",
+    "\n",
+    "The bar charts below show both the top 10 cities in terms of total crime and in terms of violent crime rate in 2024.\n",
+    "\n",
+    "For the top cities for 2024 total crime rate, we see many of the same cities we saw when looking at the top cities in terms of long term average total crime rate. Amsterdam once again tops the list for total crime rate, followed by Rotterdam and Eindhoven. Other cities that were not in our examination of long term trends also appear as top cities for total crime in 2024, such as Heerlen, Schiedam, Arnhem and Roermond.\n",
+    "\n",
+    "Many of the same cities are also present in the top 10 ranking for violent crime rate in 2024, although in a very different order. While Heerlen comes in 5th place for their total crime rate in 2024, it takes 1st place for its violent crime rate together with Rotterdam. And while Amsterdam took 1st place for total crime, it comes in 2nd place for violent crime in 2024 together with Cranendonck.\n",
+    "\n",
+    "One interesteing pattern is that a number of cities in Limburg show up in the ranking for total and violent crime for 2024, including some lesser known municipalities like Heerlen and Cranendonck. However, this tracks with the pattern we saw in the regional trends for total crime, where Limburg as a region took 3rd place."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 281,
    "id": "e62364f5-8823-4813-9ff2-eceb82ee0b9e",
    "metadata": {},
    "outputs": [],
@@ -6760,6 +6768,20 @@
    "metadata": {},
    "source": [
     "### Largest percent increases"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8b293f92-fbd2-4650-a50f-8b6354a7344f",
+   "metadata": {},
+   "source": [
+    "Instead of looking at the cities with the highest absolute crime rates, we can also look at municipalities with the largest percentage changes in crime rates.\n",
+    "\n",
+    "The table below shows the 10 municipalities with the largest percentage increase in total crime between 2019-2024, compared to the percentage change in total crime rate nationally. The national total crime rate has decreased by 3.34% from 2019 to 2024.\n",
+    "\n",
+    "In contrast, the 10 municipalities that have experienced the largest percent increases in total crime rates range around to 30 to a 50% increase from 2019 to 2024. Many of these municipalities will not be familiar to the average readers as they tend to be much smaller than the larger and more well-known cities we've been examining. \n",
+    "\n",
+    "But clearly, despite the national decreasing trend in crime, certain areas of the country are experiencing a much heaveri burden of crime than they did pre-pandemic, and this can have large consequences for the how the perception of crime influences people's consumption of media, their political opinions and their attitudes towards the society in which they live."
    ]
   },
   {
